# beacon

./: .env.example  .gitignore  .prettierignore  Cargo.toml  README.md  SECURITY.md  flake.nix  sources.nix
.github/workflows/: check.yml  publish.yml
.sqlx/: query-0043f7fea6d897a3dad39dc38e7891e9e6e01675e3e48b06e81e2a301c12c72e.json  query-0281b7a2d4ba9df708eb1ef3d229a58e77c842dd502266f4f417d2169c711708.json  query-0378879b857243bfd64fc97c231a72d500f2ce3066645a803f5ccad2d29b7acc.json  query-16d39e7846c63909c4d7110342417995d88b7883c55f3c4634249ed9cb8969d0.json  query-1fe4b792e3a405d717b235231200cf16f46219829a2f7469268aae8e20eb95f6.json  query-2f49bbaa969485fe11cd3c0c337932420e461dd7049cdced2d55cca80d036c82.json  query-2f8917f83ea0bc41d699aa4338acbe116c6c37cb58b7013e02f77eedd8443a53.json  query-300a6b70bc9b77518f1561911a4f1841819d21ed7ae85b00be899b00e3817664.json  query-31aaec5e458d3472cf8f3bcb01ca1c89f0cc8bdf10c1c8c8e41b06a6b2f6829f.json  query-36e40c8af7e8c14c93d4bb4bdaace37d0362310d0e275716b7472db22de6bef3.json  query-3a33839becada7525dcbaa51be8f6751ecc90a33680208fd7856efcd9c392e96.json  query-3c07741a7ad1a991c7bfb5a328fb1b41692f64731b0bc68f38387dd6d5af7374.json  query-3cdd2eddbfdf53b33515a10267440793d066a6f2cc30bbd77590fe5dfec4ff59.json  query-415dc511a6dbaf38021adeb3e2f9e0eaf7de33cdb82d7c5cd2d1acf82faacb3f.json  query-43bad1d936ba363d45341c3e817028e3f043a4c61d4bd10aec9d54da014cd2c4.json  query-50ddc882981daddd3688331aedd033a76b08082108f6c39366bbb562dd5dad3c.json  query-5d4520779960eb0113bbf659b9fa3076cdd272b6a4b70903d407aaffa3d535df.json  query-5f22f017cac39d129dc4da266e0a5bd2ef5ec825c73ab29fe65fd4aa2153fa3b.json  query-65cba1a20b63b658459bd53b288206687b41afc1e9707ef56d3dc64c6b8f003e.json  query-6f4ffd7efa207b6bd803b437deb29124e0779954c15dfd013095db698141a494.json  query-6fb81cb03ccf9598b475869f86db7ef25cdfe2ee45e7d52ef6853b517d6707cd.json  query-71d80b198de371c218bf63070070398272634f6d9d097d1f118fdd824f4401ed.json  query-73e2142edade5584e975f637034befdfbc4e6ec1eb4084c2882ae33aae85ac67.json  query-8a06ca2e5d18489d7f757d3db254337fe1fa78445c142747914b46fbee4d8809.json  query-94daa170eabaefba28a34df79de3f18f395caeb8cd8a732e32edd342f35ef8a9.json  query-abfdfa6359728577326514fe8c7c16e29a2f29cb6c0c362c7fd81410a99568f2.json  query-af4d02604b748d407a0749a77c6cea95c88ee7561bc572daf969d44d1be542e2.json  query-b683eac22e7916d044908c3dc46b1c5ac24153f27fb6d3dda39a2126aecadee1.json  query-ba597f9ef97326aa0f71835d5e96c460ae915fc26726a1f17bf83bf397d30a63.json  query-c09595249acc299eab20e24a8cc03821325ea8239c0958fe4c6f9efdd498922e.json  query-c3775f3546132b2aac019c3955914deb306daa6b27f5507ac09c1c9c51d6dd79.json  query-cce8be592c178ac7d9a7171602c6329a998d502b061076ef21a18e90d171b5eb.json  query-d1e6dcadce222603f7a2d7fd02861fd554174b2e93adf17c0e590486192e4866.json  query-e4332a26da67fadc73f7c7316dfc2a788414d4a36f4e4be1de90b2e0339da166.json  query-e868ff64fdd3dd0c386041ec239bf8c62df3957c14f6199b4fe698117b0da9ad.json  query-edb1fa0fd74d2b2115055f186c8cbb55b35518ccae7cb2bb02b67932aa48574b.json  query-f29f1f88f53a177aed3c4d7dfa7dc58288b72cd2882e3f70f873491485f110e4.json  query-f5b9de59a0eb7f4dd84037272cd816fda9c346ec67020decb3ceeb77f1605875.json  query-f68314b773d5de0865bbb59dd0e51d2e6901697b107f5ef4a577cc336ea68a71.json  query-ff62ddcd504b4c75a23e315df2a7cabfd900b42ff14dc5b8a9d465e1be494437.json
cli/: Cargo.toml
cli/src/: auth.rs  byte_stream.rs  cert.rs  config.rs  main.rs
examples/: beacon.toml
frontend/: .eslintignore  .eslintrc.json  package.json  tailwind.config.ts
frontend/app/: layout.tsx  not-found.tsx  page.tsx
frontend/app/files/[fileid]/[filename]/: loading.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/app/panel/: layout.tsx  page.tsx
frontend/app/panel/account/profile/: page.tsx  username.tsx
frontend/app/panel/account/security/: logout.tsx  page.tsx  password.tsx  ssh-key-form.tsx  ssh-keys.tsx
frontend/app/panel/admin/invites/: page.tsx
frontend/app/panel/admin/users/: page.tsx  user-table.tsx
frontend/app/panel/files/: file-table.tsx  page.tsx
frontend/app/register/: page.tsx
frontend/components/: change-password-form.tsx  change-username-form.tsx  create-invite-form.tsx  dashboard.tsx  file-preview.tsx  login-form.tsx  logout.tsx  main-nav.tsx  mode-toggle.tsx  nav.tsx  register-form.tsx  ssh-key.tsx
frontend/lib/: config.ts  server-fetch.ts  server-fetch.tsx  sessions.ts
migrations/: 20240404101316_files.sql  20240423150118_users.sql  20240424074707_authentication.sql  20240519181657_ssh-keys.sql  20240529112337_user-invites.sql
nix/: Caddyfile
panel/: Cargo.toml  tailwind.config.js
panel/client/: Cargo.toml
panel/client/src/: lib.rs
panel/server/: Cargo.toml
panel/server/src/: download.rs  file_store.rs  fileserv.rs  main.rs  state.rs  upload.rs
panel/shared/: Cargo.toml
panel/shared/src/: download.rs  file.rs  lib.rs
panel/src/: app.rs  file.rs  lib.rs  main.rs  server.rs
panel/src/app/: download.rs
panel/src/server/: file.rs  fileserv.rs  state.rs
panel/src/server/api/: download.rs  upload.rs
server/: Cargo.toml
server/src/: api.rs  auth.rs  config.rs  error.rs  file.rs  main.rs  model.rs  session.rs  state.rs
server/src/api/: auth.rs  authenticate.rs  config.rs  download.rs  file_info.rs  files.rs  invites.rs  logout.rs  upload.rs  usernames.rs  users.rs
server/src/api/auth/: password.rs  ssh.rs
server/src/api/auth/ssh/: step1.rs  step2.rs
server/src/api/files/: file_id.rs
server/src/api/files/file_id/: file_name.rs
server/src/api/files/file_id/file_name/: content.rs
server/src/api/usernames/: username.rs
server/src/api/users/: files.rs  ssh_keys.rs  user_id.rs
server/src/api/users/user_id/: admin.rs  files.rs  password.rs  ssh_keys.rs  stats.rs  username.rs
server/src/api/users/user_id/ssh_keys/: fingerprint.rs
server/src/auth/: ssh.rs
