[package]
name = "beacon-panel"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.81"
axum = { version = "0.7.0", optional = true, features = ["macros"] }
cfg-if = "1.0.0"
chrono = { version = "0.4.37", features = ["serde"], default-features = false }
console_error_panic_hook = { version = "0.1.7", optional = true }
console_log = { version = "1.0.0", optional = true }
dotenvy = { version = "0.15.7", optional = true }
futures = { version = "0.3.30", optional = true }
http = "1.0.0"
icondata = "0.3.0"
leptos = "0.6.0"
leptos_axum = { version = "0.6.0", optional = true }
leptos_icons = "0.3.0"
leptos_meta = "0.6.0"
leptos_router = "0.6.0"
log = "0.4.20"
rand = "0.8.5"
reqwest = "0.12.2"
serde = "1.0.197"
simple_logger = { version = "4.2.0", optional = true }
sqlx = { version = "0.7.4", features = ["chrono", "postgres", "runtime-tokio"], optional = true }
thiserror = "1.0.0"
tokio = { version = "1.33.0", optional = true, features = ["full"] }
tokio-util = { version = "0.7.10", optional = true, features = ["io"] }
tower = { version = "0.4.13", optional = true, features = ["full"] }
tower-http = { version = "0.5", optional = true, features = ["full"] }
uuid = "1.7.0"
wasm-bindgen = { version = "=0.2.89", optional = true }

[features]
default = []
hydrate = [
  "leptos/hydrate",
  "leptos_meta/hydrate",
  "leptos_router/hydrate",
  "dep:console_error_panic_hook",
  "dep:console_log",
  "dep:wasm-bindgen",
]
ssr = [
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "dep:axum",
  "dep:dotenvy",
  "dep:futures",
  "dep:leptos_axum",
  "dep:simple_logger",
  "dep:sqlx",
  "dep:tokio",
  "dep:tokio-util",
  "dep:tower",
  "dep:tower-http",
]
