[package]
name = "beacon-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
axum = { version = "0.7.0", features = ["macros"] }
cfg-if = "1.0.0"
chrono = { version = "0.4.37", features = ["serde"], default-features = false }
dotenvy = "0.15.7"
futures = "0.3.30"
http = "1.0.0"
rand = "0.8.5"
serde = "1.0.197"
sqlx = { version = "0.7.4", features = ["chrono", "postgres", "runtime-tokio"] }
thiserror = "1.0.0"
tokio = { version = "1.33.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["io"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = "1.7.0"
