[package]
name = "beacon-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
argon2 = { version = "0.5.3", features = ["std"] }
axum = { version = "0.7.0", features = ["macros"] }
axum-extra = { version = "0.9.3", features = ["cookie"] }
cfg-if = "1.0.0"
chrono = { version = "0.4.37", features = ["serde", "now"], default-features = false }
dotenvy = "0.15.7"
futures = "0.3.30"
hex = "0.4.3"
http = "1.0.0"
num-traits = "0.2.19"
rand = "0.8.5"
rsa = "0.9.6"
serde = "1.0.197"
serde_json = "1.0.117"
sqlx = { version = "0.7.4", features = ["chrono", "postgres", "runtime-tokio", "uuid", "bigdecimal"] }
ssh-key = { version = "0.6.6", features = ["encryption", "rsa", "ed25519", "serde"] }
thiserror = "1.0.0"
time = "0.3.36"
tokio = { version = "1.33.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["io"] }
toml = "0.8.13"
tower = { version = "0.4.13", features = ["full"] }
tower-cookies = "0.10.0"
tower-http = { version = "0.5", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.7.0", features = ["serde"] }
