[package]
name = "beacon-panel-server"
version = "0.1.0"
edition = "2021"

[dependencies]
beacon-panel-shared = { workspace = true, features = ["ssr"] }
leptos = { workspace = true, features = [ "ssr" ]}
leptos_axum.workspace = true

axum.workspace = true
simple_logger.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
log.workspace = true
