[package]
name = "beacon-panel-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
axum = { workspace = true, features = ["macros"] }
beacon-panel-shared = { workspace = true, features = ["ssr"] }
chrono = "0.4.37"
dotenvy = "0.15.7"
futures = "0.3.30"
leptos = { workspace = true, features = [ "ssr" ]}
leptos_axum.workspace = true
log.workspace = true
simple_logger.workspace = true
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio", "tls-native-tls", "uuid", "chrono"] }
tokio = { workspace = true }
tokio-util = { version = "0.7.10", features = ["io"] }
tower.workspace = true
tower-http.workspace = true
uuid = { version = "1.7.0", features = ["v7", "serde"] }
