[package]
name = "beacon-panel-shared"
version = "0.1.0"
edition = "2021"

[dependencies]
cfg-if.workspace = true
http.workspace = true
icondata = "0.3.0"
leptos.workspace = true
leptos_axum = { workspace = true, optional = true }
leptos_icons = "0.3.0"
leptos_meta.workspace = true
leptos_router.workspace = true
rand = "0.8.5"
serde = "1.0.197"
thiserror.workspace = true
uuid = "1.7.0"

[features]
default = []
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = ["leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr", "dep:leptos_axum"]
