[package]
name = "beacon-panel-shared"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
cfg-if.workspace = true
chrono = { version = "0.4.37", features = ["serde"], default-features = false }
http.workspace = true
icondata = "0.3.0"
leptos.workspace = true
leptos_axum = { workspace = true, optional = true }
leptos_icons = "0.3.0"
leptos_meta.workspace = true
leptos_router.workspace = true
rand = "0.8.5"
reqwest = "0.12.2"
serde = "1.0.197"
sqlx = { version = "0.7.4", features = ["chrono", "postgres"], optional = true }
thiserror.workspace = true
tokio = { workspace = true, optional = true }
uuid = "1.7.0"

[features]
default = []
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = [
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "dep:leptos_axum",
  "dep:sqlx",
  "dep:tokio",
]
